--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8.26.0",
     "eslint-config-next": "^13.0.1",
     "next": "13.0.1",
+    "next-seo": "^5.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
